--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-js-diagrams",
-  "version": "3.1.10",
+  "name": "react-js-diagrams-wdelete",
+  "version": "3.1.11",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jonmillar/react-js-diagrams.git"
+    "url": "https://github.com/Arkanayan/react-js-diagrams"
   },
   "scripts": {
     "start": "node_modules/.bin/babel-node server.js --presets es2015,es2016,es2017,stage-0",
@@ -30,7 +30,8 @@
   "author": "Jeff Wooden <woodenconsulting@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "lodash": "4.17.4"
+    "lodash": "4.17.4",
+    "redux-undo": "^0.6.1"
   },
   "devDependencies": {
     "babel-cli": "6.24.0",
@@ -65,7 +66,6 @@
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-logger": "^2.10.2",
-    "redux-undo": "^0.6.1",
     "sass-loader": "6.0.0",
     "sinon": "^2.3.2",
     "source-map-loader": "0.1.6",
